--- a/templates/basic/layout.html
+++ b/templates/basic/layout.html
@@ -47,13 +47,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/admin">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/crea_slot">Crea Slot</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/prenotazioni">Prenotazioni</a>
-              </li>
+              </li>    
             </ul>
           </div>
         </div>
@@ -89,20 +83,26 @@
     <!-- Navbar Non loggato -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/log_in">Login</a>
+        <a class="navbar-brand" href="/">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarAnonimo" aria-controls="navbarAnonimo" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarAnonimo">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" href="/manutenzione">I nostri servizi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/log_in">Login</a>
+              <a class="nav-link" href="/biomeccanica">Biomeccanica</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/assistenza">Assistenza personalizzata</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/registrati">Registrati</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/log_in">Accedi</a>
             </li>
           </ul>
         </div>
