--- a/templates/categoria/manutenzione.html
+++ b/templates/categoria/manutenzione.html
@@ -1,14 +1,19 @@
 {% extends "basic/layout.html" %}
+
 {% block content %}
-
-{% for servizi in servizi %}
-<div class="text-bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-      <div class="my-3 py-3">
-        <h2 class="display-5">{{ servizi.Servizio }}</h2>
-        <p class="lead">{{ servizi.Prezzo }}</p>
+<div class="container my-5">
+  <div class="row justify-content-center">
+    {% for servizio in servizi %}
+    <div class="col-12 col-sm-10 col-md-6 col-lg-4 mb-4">
+      <div class="card h-100 shadow-sm text-center">
+        <img src="{{ servizio.immagine }}" class="card-img-top img-fluid" alt="{{ servizio.Servizio }}">
+        <div class="card-body bg-dark text-white">
+          <h5 class="card-title">{{ servizio.Servizio }}</h5>
+          <p class="card-text fs-5">💶 Prezzo: {{ servizio.Prezzo }} €</p>
+        </div>
       </div>
-      <div class="bg-body-tertiary shadow-sm mx-auto img-fluid" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"><img src="{{ servizi.immagine }}"></div>
     </div>
-{% endfor %}
-
+    {% endfor %}
+  </div>
+</div>
 {% endblock %}
