--- a/templates/utente/sidebar.html
+++ b/templates/utente/sidebar.html
@@ -1,31 +1,50 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 250px; height: 100vh;">
+<!-- Navbar per dispositivi mobili -->
+<nav class="navbar navbar-light bg-light d-md-none">
+  <div class="container-fluid">
+    <button class="btn btn-outline-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarUtente" aria-controls="sidebarUtente">
+      <i class="bi bi-list"></i> Menu
+    </button>
+  </div>
+</nav>
+
+<!-- Sidebar Offcanvas (mobile) / Fissa (desktop) -->
+<div class="offcanvas-md offcanvas-start d-flex flex-column flex-shrink-0 p-3 bg-light" tabindex="-1" id="sidebarUtente">
+  <div class="offcanvas-header d-md-none">
+    <h5 class="offcanvas-title">Menu Utente</h5>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Chiudi"></button>
+  </div>
+
+  <div class="offcanvas-body p-0 d-flex flex-column">
+    <a href="{{ url_for('utente.dashboard_utente') }}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none">
+      <i class="bi bi-speedometer2 me-2"></i><span class="fs-4">Dashboard</span>
+    </a>
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
-        <a href="{{ url_for('utente.dashboard_utente') }}" class="nav-link text-white">
+        <a href="{{ url_for('utente.dashboard_utente') }}" class="nav-link {% if request.endpoint == 'utente.dashboard_utente' %}active{% endif %}">
           <i class="bi bi-house"></i> Dashboard
         </a>
       </li>
       <li>
-        <a href="{{ url_for('utente.visualizza_prenotazioni') }}" class="nav-link text-white">
+        <a href="{{ url_for('utente.visualizza_prenotazioni') }}" class="nav-link {% if request.endpoint == 'utente.visualizza_prenotazioni' %}active{% endif %}">
           <i class="bi bi-calendar-check"></i> Le mie prenotazioni
         </a>
       </li>
       <li>
-        <a href="{{ url_for('utente.calendario') }}" class="nav-link text-white">
+        <a href="{{ url_for('utente.calendario') }}" class="nav-link {% if request.endpoint == 'utente.calendario' %}active{% endif %}">
           <i class="bi bi-calendar-plus"></i> Prenota
         </a>
       </li>
       <li>
-        <a href="{{ url_for('utente.profilo') }}" class="nav-link text-white">
+        <a href="{{ url_for('utente.profilo') }}" class="nav-link {% if request.endpoint == 'utente.profilo' %}active{% endif %}">
           <i class="bi bi-person"></i> Profilo
         </a>
       </li>
       <li>
-        <a href="{{ url_for('auth.logout') }}" class="nav-link text-white">
+        <a href="{{ url_for('auth.logout') }}" class="nav-link">
           <i class="bi bi-box-arrow-right"></i> Esci
         </a>
       </li>
     </ul>
   </div>
-  
+</div>
