--- a/templates/email/benvenuto.html
+++ b/templates/email/benvenuto.html
@@ -66,7 +66,8 @@
         </ul>
 
         <p class="text-center">
-            <a class="btn" href="https://cicloverso.it/log_in">Accedi ora</a>
+            <!--Inserisci qui il link al login-->
+            <a class="btn" href="http://cicloverso.it/log_in">Accedi ora</a>
         </p>
 
         <div class="footer">
