--- a/templates/admin/genera_slot_auto_page.html
+++ b/templates/admin/genera_slot_auto_page.html
@@ -1,6 +1,7 @@
 {% extends "basic/layout.html" %}
 {% block content %}
 <div class="container mt-4">
+  {% include 'admin/sidebar.html' %}
   <h3>Genera Slot Automatici</h3>
   <p class="text-muted">Seleziona una data per generare automaticamente gli slot sulla base degli orari di apertura.</p>
 
